<resources>


    <!-- REMINDER -->
    <string name="add_reminder"> Dodaj przypomnienie</string>
    <string name="next_realization_date">Najbliższy termin wykonania: %1$s</string>

    <!--FREQUENCY  -->
    <string name="frequency">Częstotliwość</string>

    <string name="set_days_of_week">Wybierz dni tygodnia</string>
    <string-array name="week_days_list">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>
    <string name="days_of_week_error">Musisz wybrać przynajmniej jeden dzień tygodnia</string>

    <string name="x_days_frequency">Co X dni</string>
    <plurals name="daily_frequency">
        <item quantity="one">Co %1$d  dzień</item>
        <item quantity="other"> Co %1$d dni</item>
    </plurals>


    <!--      DURATION  -->
    <string name="duration">Czas trwania</string>
    <string name="beginning_date">Data rozpoczęcia: %1$s</string>
    <string name="beginning_date_error">Niewłaściwa data rozpoczęcia! </string>
    <string name="days_duration_hint">Podaj ilość dni</string>

    <string name="x_days_duration">Przez x dni</string>
    <plurals name="days_duration">
        <item quantity="one">Przez %1$d dzień</item>
        <item quantity="other">Przez %1$d dni</item>
    </plurals>

    <string name="end_date_error"> Niewłaściwa data zakończenia! </string>
    <string name="end_date">Data Zakończenia</string>
    <string name="end_date_format">Data zakończenia: %1$s</string>
    <string name="no_end_date">Bez daty zakończenia </string>
    <string name="error_blank_input">Brak liczby dni </string>

    <string name="error_number_starts_with_0">Liczba dni nie moze zaczynac sie od 0</string>

    <!--    NOTIFICATION TIME -->
    <string name="set_notification_time">Ustaw czas powiadomienia</string>
    <string name="notification_time">Czas powiadomienia</string>
    <string name="no_notificaton">Brak powiadomienia</string>

    <!--    COMMON STRINGS -->
    <string name="details">Informacje</string>
    <string name="save">Zapisz</string>
    <string name="confirm">Potwierdź</string>
    <string name="name">Nazwa</string>
    <string name="app_name">Task App</string>
    <string name="cancel"> Anuluj</string>
    <string name="delete">Usuń</string>
    <string name="ok">OK</string>
    <string name="edit">Edytuj</string>

    <!--TASK -->
    <string name="my_tasks">Moje zadania</string>
    <string name="add_task">Dodaj zadanie</string>
    <string name="save_without_reminder">Zapisz bez dodawania przypomnienia</string>
    <string name="task_name"> Nazwa zadania:  %1$s</string>
    <string name="task_name_hint"> Nazwa zadania:</string>
    <string name="task_description">Opis zadania:  %1$s</string>
    <string name="task_description_hint">Opis zadania (opcjonalnie)</string>
    <string name="task_details">Informacje o zadaniu</string>
    <string name="task_delete_title">Czy na pewno chcesz usunąć to zadanie?</string>
    <string name="edit_task">Edytuj zadanie</string>
    <string name="task_name_error">Nazwa musi składać się z conajmniej 3 znaków</string>
    <string name="completed">Wykonane</string>

    <!--    TODAY  -->
    <string name="today">Dzisiaj</string>
    <string name="add_spontaneous_tasks">Dodaj spontaniczne zadania</string>
    <string name="add">Dodaj</string>
    <string name="determine_delay_time">Określ czas zwłoki</string>
    <string name="delay_30_min">odłóż na 30min</string>
    <string name="delay_later">odłóż na później</string>
    <string name="enable_notification">Włącz powiadomienia</string>
    <string name="task_notification_title">Czas wykonać zadanie</string>
    <string name="an_error_ocurred">An Error Ocurred</string>

</resources>
