<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.taskapp.viewmodels.reminder.ReminderViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/reminder_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AddTaskFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            >

            <!--            MAIN LAYOUT-->
            <LinearLayout style="@style/DefaultLinearLayoutStyle">

                <!-- DETAILS LAYOUT -->
<!--                <LinearLayout style="@style/DefaultLinearLayoutStyle">-->
                    <EditText
                        style="@style/ShortMessageEditTextStyle"
                        android:id="@+id/task_name"
                        android:hint="@string/task_name_hint"
                        android:text="@={viewModel.taskDetailsModel.taskName}"
                        app:setError="@{viewModel.taskDetailsModel.taskNameError}" />

                    <EditText
                        style="@style/ShortMessageEditTextStyle"
                        android:id="@+id/task_description"
                        android:hint="@string/task_description_hint"
                        android:text="@={viewModel.taskDetailsModel.taskDescription}" />

<!--                </LinearLayout>-->


                <!--REMINDER LAYOUT -->
                <androidx.appcompat.widget.SwitchCompat
                    style="@style/DefaultSwitchStyle"
                    android:layout_width="match_parent"
                    android:checked="@={viewModel.isReminderSwitchChecked()}"
                    android:text="@string/add_reminder" />

                <LinearLayout
                    android:id="@+id/reminder_layout"
                    style="@style/DefaultLinearLayoutStyle"
                    app:showWhen="@{viewModel.isReminderSwitchChecked()}">

                    <!--                    NOTIFICATION LAYOUT -->

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/set_time_of_notification"
                        style="@style/WideButtonStyle"
                        android:text="@string/set_notification_time" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/is_notification_set"
                        style="@style/DefaultSwitchStyle"
                        android:checked="@={viewModel.notificationModel.isNotificationTimeSet}"
                        android:text="@string/enable_notification" />


                    <!-- FREQUENCY LAYOUT -->
                    <LinearLayout
                        android:id="@+id/frequency_layout"
                        style="@style/DefaultLinearLayoutStyle">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DefaultTextViewStyle"
                            android:text="@string/frequency"
                            android:textAppearance="@style/DefaultHeadlineTextAppearance" />


                        <RadioGroup
                            android:id="@+id/frequency_radioGroup"
                            style="@style/DefaultRadioGroupStyle"
                            android:checkedButton="@id/daily_freq_radio">

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/daily_freq_radio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/x_days_frequency" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/days_of_week_radio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/set_days_of_week" />

                        </RadioGroup>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/set_daily_frequency_btn"
                            style="@style/WideButtonStyle"
                            android:text="@{@plurals/daily_frequency(viewModel.frequencyModel.currentDailyFrequency,viewModel.frequencyModel.currentDailyFrequency)}"
                            android:visibility="visible" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/set_days_of_week_btn"
                            style="@style/WideButtonStyle"
                            android:text="@string/set_days_of_week"
                            android:visibility="gone" />

                        <TextView
                            style="@style/DefaultTextViewStyle"
                            android:text="@string/duration"
                            android:textAppearance="@style/DefaultHeadlineTextAppearance" />


                    </LinearLayout>


                    <!-- DURATION LAYOUT -->

                    <LinearLayout
                        android:id="@+id/duration_layout"
                        style="@style/DefaultLinearLayoutStyle">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/beginning_date_btn"
                            android:textColor="@color/design_default_color_background"
                            style="@style/WideButtonStyle"
                            android:text="@{@string/beginning_date(viewModel.durationModel.beginningDate)}"
                            />

                        <RadioGroup
                            android:id="@+id/duration_radioGroup"
                            style="@style/DefaultRadioGroupStyle"
                            android:checkedButton="@id/no_end_date_radio">

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/no_end_date_radio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_end_date" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/x_days_duration_radio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/x_days_duration" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/end_date_radio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/end_date" />
                        </RadioGroup>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/set_duration_days_btn"
                            style="@style/WideButtonStyle"
                            android:text="@{@plurals/days_duration(viewModel.durationModel.currentDaysDuration,viewModel.durationModel.currentDaysDuration)}"
                            android:visibility="gone" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/set_end_date_btn"
                            style="@style/WideButtonStyle"
                            android:text="@{@string/end_date_format(viewModel.durationModel.currentEndDate)}"
                            android:visibility="gone" />

                    </LinearLayout>
                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_button"
                    style="@style/WideButtonStyle"
                    android:enabled="@{viewModel.durationModel.datesValid &amp;&amp; viewModel.taskDetailsModel.valid}"
                    android:text="@string/confirm"
                    app:backgroundTint="#0B530E" />


            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>