<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<!-- todo  include radioButton crash fix -->
    <data>
        <variable
            name="viewModel"
            type="com.example.taskapp.viewmodels.reminder.ReminderViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/reminder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:showIn="@layout/edit_task_fragment">

        <!--                    NOTIFICATION LAYOUT -->
        <com.google.android.material.button.MaterialButton

            android:id="@+id/set_time_of_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/set_notification_time"
            android:textColor="@color/design_default_color_background"
            app:backgroundTint="@color/colorPrimaryDark" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_notification"
            android:checked="@={viewModel.notificationModel.isNotificationTimeSet}"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/SwitchTheme" />

        <!-- FREQUENCY LAYOUT -->
        <LinearLayout
            android:id="@+id/frequency_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/frequency"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_background"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/frequency_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checkedButton="@id/daily_freq_radio"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/daily_freq_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x_days_frequency" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/days_of_week_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_days_of_week" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_daily_frequency_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@{@plurals/daily_frequency(viewModel.frequencyModel.currentDailyFrequency,viewModel.frequencyModel.currentDailyFrequency)}"
                android:textColor="@color/design_default_color_background"
                android:visibility="visible"
                app:backgroundTint="@color/colorPrimaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_days_of_week_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_days_of_week"
                android:textColor="@color/design_default_color_background"
                android:visibility="gone"
                app:backgroundTint="@color/colorPrimaryDark" />


        </LinearLayout>


        <!-- DURATION LAYOUT -->

        <LinearLayout
            android:id="@+id/duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal"
                android:text="@string/duration"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_background"
                android:textSize="30sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/beginning_date_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:padding="10dp"
                android:text="@{@string/beginning_date(viewModel.durationModel.beginningDate)}"

                android:textColor="@color/design_default_color_background"
                app:backgroundTint="@color/colorPrimaryDark" />

            <RadioGroup
                android:id="@+id/duration_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/no_end_date_radio"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/no_end_date_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_end_date" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/x_days_duration_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x_days_duration" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/end_date_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_duration_days_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@plurals/days_duration(viewModel.durationModel.currentDaysDuration,viewModel.durationModel.currentDaysDuration)}"
                android:visibility="gone"
                app:backgroundTint="@color/colorPrimaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_end_date_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/end_date_format(viewModel.durationModel.currentEndDate)}"
                android:visibility="gone"
                app:backgroundTint="@color/colorPrimaryDark" />

        </LinearLayout>
    </LinearLayout>
</layout>


