<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.taskapp.viewmodels.addTask.AddTaskViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AddTaskFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:text="@={viewModel.taskFields.taskName}"
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name_hint"
                android:inputType="textShortMessage"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:onFocus="@{viewModel.onFocusTaskName}"
                app:setError="@{viewModel.taskFields.taskNameError}"
                android:importantForAutofill="no" />

            <EditText
                android:text="@={viewModel.taskFields.taskDescription}"
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "@string/task_description_hint"
                android:inputType="textMultiLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_name"
                app:onFocus="@{viewModel.onFocusTaskDescription}"
                android:importantForAutofill="no" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_reminder_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.taskFields.valid}"
                android:text="@string/add_reminder"
                app:layout_constraintTop_toBottomOf="@id/task_description"
                app:layout_constraintBottom_toTopOf="@id/save_btn"
                app:layout_constraintLeft_toLeftOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:enabled="@{viewModel.taskFields.valid}"
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_without_reminder"
                app:layout_constraintTop_toBottomOf="@id/add_reminder_btn"
                app:layout_constraintLeft_toLeftOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>