<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.taskapp.viewmodels.AddReminderViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/reminder_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AddReminderFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <!--            MAIN LAYOUT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!-- DETAILS LAYOUT -->
                <com.google.android.material.button.MaterialButton
                    android:textColor="@color/design_default_color_background"
                    app:backgroundTint="@color/colorPrimaryDark"
                    android:enabled="false"
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/details"
                     />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/task_name"
                    android:text="@{@string/task_name(viewModel.taskDetails.name)}"
                    android:textColor="@color/design_default_color_background"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center_horizontal" />
                <TextView
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/design_default_color_background"
                    android:text="@{@string/task_description(viewModel.taskDetails.description)}"
                    android:id="@+id/task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
                </LinearLayout>


                <!--REMINDER LAYOUT -->
                <LinearLayout
                    android:id="@+id/reminder_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--                    NOTIFICATION LAYOUT -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/set_time_of_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:text= "@string/set_notification_time"
                        app:backgroundTint="@color/colorPrimaryDark" />


                    <!-- FREQUENCY LAYOUT -->
                    <LinearLayout
                        android:id="@+id/frequency_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:textColor="@color/design_default_color_background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/frequency"
                            android:textAlignment="center"
                            android:textSize="30sp"
                            />


                        <RadioGroup
                            android:id="@+id/frequency_radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:checkedButton="@id/daily_freq_radio"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:layout_width="wrap_content"
                                android:id="@+id/daily_freq_radio"
                                android:layout_height="wrap_content"
                                android:text=  "@string/x_days_frequency" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/days_of_week_radio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/set_days_of_week"
                                />

                        </RadioGroup>

                        <com.google.android.material.button.MaterialButton
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:id="@+id/set_daily_frequency_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:visibility="visible"
                            android:text="@{@plurals/daily_frequency(viewModel.frequencyModel.currentDailyFrequency,viewModel.frequencyModel.currentDailyFrequency)}"
                            />

                        <com.google.android.material.button.MaterialButton
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:id="@+id/set_days_of_week_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"

                            android:text="@string/set_days_of_week"
                            android:visibility="gone" />


                    </LinearLayout>


                    <!-- DURATION LAYOUT -->

                    <LinearLayout
                        android:id="@+id/duration_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/design_default_color_background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/duration"
                            android:textAlignment="center"
                            android:textSize="30sp" />


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/beginning_date_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:text="@{@string/beginning_date(viewModel.durationModel.beginningDate)}"/>

                        <RadioGroup
                            android:id="@+id/duration_radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checkedButton="@id/no_end_date_radio"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/no_end_date_radio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_end_date" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/x_days_duration_radio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/x_days_duration" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/end_date_radio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/end_date"
                                />
                        </RadioGroup>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/set_duration_days_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{@plurals/days_duration(viewModel.durationModel.currentDaysDuration,viewModel.durationModel.currentDaysDuration)}"
                            android:visibility="gone"
                            app:backgroundTint="@color/colorPrimaryDark" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/set_end_date_btn"
                            android:text="@{@string/end_date_format(viewModel.durationModel.currentEndDate)}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:visibility="gone" />

                    </LinearLayout>
                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:enabled="@{viewModel.durationModel.dateValid}"
                    android:id="@+id/confirm_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/confirm"
                    app:backgroundTint="#0B530E" />


            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>